--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./node_modules/codemirror/theme/base16-dark.css"/>
     <link rel="stylesheet" href="./node_modules/codemirror/theme/neo.css"/>
     <link rel="stylesheet" href="./node_modules/codemirror/theme/neat.css"/>
+    <link rel="stylesheet" href="./node_modules/source-sans-pro/source-sans-pro.css"/>
+    <link rel="stylesheet" href="./node_modules/source-code-pro/source-code-pro.css"/>
     <link rel="stylesheet" href="./main.css"/>
   </head>
   <body>
