--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <title>composition</title>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css"/>
-    <link rel="stylesheet" href="./node_modules/codemirror/theme/solarized.css"/>
-    <link rel="stylesheet" href="./node_modules/codemirror/theme/base16-light.css"/>
-    <link rel="stylesheet" href="./node_modules/codemirror/theme/base16-dark.css"/>
-    <link rel="stylesheet" href="./node_modules/codemirror/theme/neo.css"/>
-    <link rel="stylesheet" href="./node_modules/codemirror/theme/neat.css"/>
     <link rel="stylesheet" href="./node_modules/source-sans-pro/source-sans-pro.css"/>
     <link rel="stylesheet" href="./node_modules/source-code-pro/source-code-pro.css"/>
-    <link rel="stylesheet" href="./main.css"/>
+    <link rel="stylesheet" href="./styles/cm-composition.css"/>
+    <link rel="stylesheet" href="./styles/main.css"/>
   </head>
   <body>
     <div id="app">
