Reduce the overall amount of bootstrapping.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="app">
     </div>
     <script>
-      require('./src/app.js');
+      require('./src/index');
     </script>
   </body>
 </html>
