--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>composition</title>
+    <title>nteract</title>
     <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css"/>
     <link rel="stylesheet" href="./node_modules/source-sans-pro/source-sans-pro.css"/>
