--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css"/>
     <link rel="stylesheet" href="./node_modules/source-sans-pro/source-sans-pro.css"/>
     <link rel="stylesheet" href="./node_modules/source-code-pro/source-code-pro.css"/>
+    <link rel="stylesheet" href="./node_modules/material-design-icons/iconfont/material-icons.css"/>
     <link rel="stylesheet" href="./styles/cm-composition.css"/>
     <link rel="stylesheet" href="./styles/main.css"/>
   </head>
