--- a/src/notebook/index.html
+++ b/src/notebook/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../node_modules/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="../../node_modules/codemirror/lib/codemirror.css"/>
+    <link rel="stylesheet" href="../../node_modules/codemirror/addon/hint/show-hint.css"/>
     <link rel="stylesheet" href="../../node_modules/source-sans-pro/source-sans-pro.css"/>
     <link rel="stylesheet" href="../../node_modules/source-code-pro/source-code-pro.css"/>
     <link rel="stylesheet" href="../../node_modules/material-design-icons/iconfont/material-icons.css"/>
