--- a/src/notebook/index.html
+++ b/src/notebook/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../node_modules/codemirror/addon/hint/show-hint.css"/>
     <link rel="stylesheet" href="../../node_modules/source-sans-pro/source-sans-pro.css"/>
     <link rel="stylesheet" href="../../node_modules/source-code-pro/source-code-pro.css"/>
-    <link rel="stylesheet" href="./fonts/material-design-icons/material-icons.css"/>
+    <link rel="stylesheet" href="../../node_modules/nteract-assets/fonts/material-design-icons/material-icons.css"/>
     <link rel="stylesheet" href="./styles/cm-composition.css"/>
     <link rel="stylesheet" href="./styles/main.css"/>
   </head>
