--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <div id="app">
     </div>
     <script>
-      require('../es5/notebook/index');
+      require('../build/notebook/index');
     </script>
   </body>
 </html>
