Add loading placeholder image and text

--- a/static/index.html
+++ b/static/index.html
@@ -10,10 +10,24 @@
     <link rel="stylesheet" href="../node_modules/nteract-assets/fonts/octicons/octicons.css"/>
   </head>
   <body>
+    <div id="loading" style="
+      position: absolute;
+      width: 300px;
+      height: 100px;
+      left: calc(50% - 150px);
+      top: calc(50% - 40px);
+    ">
+      <img src="logo-wide.png" style="width: 300px;"/><br>
+      <center>Loading...</center>
+    </div>
     <div id="app">
     </div>
     <script>
-      require('../build/notebook/index');
+      window.onload = function deferredLoad() {
+        setTimeout(function timeoutCallback() {
+          require('../build/notebook/index');
+        }, 1);
+      };
     </script>
   </body>
 </html>
