Use the fancy gif logo for loading image
I really like the image from the readme :D makes waiting for startup more
happy.

Test Plan:
`npm start`, see happy loading image!

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
       left: calc(50% - 150px);
       top: calc(50% - 40px);
     ">
-      <img src="logo-wide.png" style="width: 300px;"/><br>
+      <img src="loading.gif" style="width: 300px;"/><br>
       <center>Loading...</center>
     </div>
     <div id="app">
