key off of development for NODE_ENV
default us to "production mode"

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
             console.dir(err);
           }
         }, 1);
-        if (process.env.NODE_ENV !== 'production') {
+        if (process.env.NODE_ENV === 'development') {
             var rdev = require('electron-react-devtools');
             rdev.install();
         }
