--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css"/>
     <link rel="stylesheet" href="../node_modules/codemirror/lib/codemirror.css"/>
     <link rel="stylesheet" href="../node_modules/codemirror/addon/hint/show-hint.css"/>
+    <link rel="stylesheet" href="../node_modules/codemirror/addon/dialog/dialog.css"/>
     <link rel="stylesheet" href="../node_modules/nteract-assets/fonts/source-sans-pro/source-sans-pro.css"/>
     <link rel="stylesheet" href="../node_modules/nteract-assets/fonts/source-code-pro/source-code-pro.css"/>
     <link rel="stylesheet" href="../node_modules/nteract-assets/fonts/octicons/octicons.css"/>
