--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="app">
+      Loading...
     </div>
     <script>
       window.onload = function deferredLoad() {
