perf(load): load the webpacked notebook

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -24,7 +24,7 @@
             process.env.NODE_ENV = 'production';
         }
         try {
-          require('../build/notebook/index');
+          require('../build/webpacked-notebook')
         } catch(err) {
           const el = document.querySelector('body');
           el.innerHTML = '';
