fix(splash): Use high DPI mp4

--- a/app/static/splash.html
+++ b/app/static/splash.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <div id="loading" style="
-      position: absolute;
-      width: 900px;
-      height: 400px;
-      left: calc(50% - 450px);
-      top: calc(50% - 200px);
-    ">
-      <img src="loading.gif" /><br>
-    </div>
+    <video autoplay="autoplay" loop="loop" width="565" height="233">
+      <source src="loading.mp4" type="video/mp4" />
+    </video>
   </body>
 </html>
